# truelayer-technical-pokemon

./: Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: quickstart.yml
src/: context.rs  funtranslation.rs  handlers.rs  lib.rs  main.rs
src/pokeapi/: mod.rs  models.rs
tests/: integration_test.rs
