[package]
name = "truelayer-technical-pokemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.88"
lazy_static = "1.5.0"
mockall = "0.13.1"
percent-encoding = "2.3.1"
reqwest = { version = "0.12.4", features = ["json"]}
serde = { version = "1.0.218", features = ["derive"]}
tokio = { version = "1.44.2", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
warp = "0.4.0"

[dev-dependencies]
httpmock = "0.7.0"
