[package]
name = "truelayer-technical-pokemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
lazy_static = "1.5.0"
mockall = "0.13.1"
percent-encoding = "2.3.2"
reqwest = { version = "0.12.4", features = ["json"]}
serde = { version = "1.0.225", features = ["derive"]}
tokio = { version = "1.45.1", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.20"
warp = "0.3.6"

[dev-dependencies]
httpmock = "0.7.0"
