[package]
name = "truelayer-technical-pokemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
lazy_static = "1.5.0"
mockall = "0.13.1"
percent-encoding = "2.3.2"
reqwest = { version = "0.13.0", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.20"
warp = { version = "0.4.2", features = ["server"] }

[dev-dependencies]
httpmock = "0.8.2"
warp = { version = "0.4.2", features = ["server", "test"] }
